--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "vite": "^7.0.4",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.9.0"
   }
 }
