--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "s-validator",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/s-validator/s-validator.git"
+  },
   "description": "",
   "type": "module",
   "main": "index.js",
