--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.4",
   "repository": {
     "type": "git",
-    "url": "https://github.com/s-validator/s-validator.git"
+    "url": "https://github.com/Ntropish/s-validator"
   },
   "description": "",
   "type": "module",
