--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
