--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "vite": "^7.0.4",
     "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.2.4"
-  },
-  "devDependencies": {
+    "vitest": "^3.2.4",
     "@faker-js/faker": "^9.9.0"
   }
 }
